<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:background="@color/colorBackground"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">
        <!--app:headerLayout="@layout/nav_header_navigation"-->
        <!--app:menu="@menu/activity_navigation_drawer"-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:background="@drawable/side_nav_bar"
                android:id="@+id/gradient_preloader_view"
                android:layout_width="match_parent"
                android:layout_height="176dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_header_height"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/nav_header_desc"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    app:srcCompat="@mipmap/ic_launcher"/>

                <com.graspery.www.wordcountpro.BoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <com.graspery.www.wordcountpro.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/made_by_student"/>

            </LinearLayout>


            <View
                android:id="@+id/div1"
                android:layout_above="@+id/listview_linear"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:id="@+id/listview_linear"
                android:paddingRight="4dp"
                android:orientation="vertical"
                android:layout_above="@+id/translate_layout"
                android:layout_below="@+id/gradient_preloader_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@android:color/black"
                    android:id="@+id/archive_title"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/archive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ListView
                    android:id="@+id/archive_listview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/clear_archive"
                android:layout_margin="4dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/div1"
                android:src="@drawable/bin"
                android:layout_width="15dp"
                android:layout_height="15dp"/>

            <View
                android:id="@+id/rate_divider"
                android:layout_above="@+id/translate_layout"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_marginLeft="6dp"
                android:layout_above="@id/rate_layout"
                android:id="@+id/translate_layout"
                android:padding="4dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/translate_image"
                    android:src="@drawable/earth_black"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <com.graspery.www.wordcountpro.NormalTextView
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:id="@+id/translate_textview"
                    android:textSize="16sp"
                    android:textColor="#3B3F42"
                    android:text="@string/translate_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="6dp"
                android:layout_above="@id/contact_layout"
                android:id="@+id/rate_layout"
                android:padding="4dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/rate_me_image"
                    android:src="@drawable/rate_black"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <com.graspery.www.wordcountpro.NormalTextView
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:id="@+id/rate_me_textview"
                    android:textSize="16sp"
                    android:textColor="#3B3F42"
                    android:text="@string/rate_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="6dp"
                android:layout_above="@+id/about_layout"
                android:id="@+id/contact_layout"
                android:padding="4dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/contact_me_image"
                    android:src="@drawable/contact_me_black"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <com.graspery.www.wordcountpro.NormalTextView
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:id="@+id/contact_me_textview"
                    android:textSize="16sp"
                    android:textColor="#3B3F42"
                    android:text="@string/contact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="4dp"
                android:layout_alignParentBottom="true"
                android:id="@+id/about_layout"
                android:padding="4dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/about_image"
                    android:src="@drawable/about_icon_dark"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <com.graspery.www.wordcountpro.NormalTextView
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:id="@+id/about_textview"
                    android:textSize="16sp"
                    android:textColor="#3B3F42"
                    android:text="@string/about_me"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>


        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
